fixed UI overflow, updated libraries

--- a/src/routes/login/style.module.css
+++ b/src/routes/login/style.module.css
@@ -1,5 +1,4 @@
 .page {
-  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
